[metadata]
name = akernel
version = attr: akernel.__version__
description = An asynchronous Python Jupyter kernel
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = David Brochart
author_email = david.brochart@gmail.com
url = https://github.com/davidbrochart/akernel
platforms = Windows, Linux, Mac OS X
keywords = jupyter

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  pyzmq
  typer >=0.4.0
  click
  python-dateutil
  colorama
  gast

[options.extras_require]
test =
  mypy
  flake8
  black
  pytest
  pytest-asyncio
  types-python-dateutil
  kernel_driver >=0.0.7
  ipyx >=0.1.6

react =
  ipyx >=0.1.6

[options.entry_points]
console_scripts =
    akernel = akernel.akernel:cli

[options.data_files]
share/jupyter/kernels/akernel = share/jupyter/kernels/akernel/kernel.json

[flake8]
max-line-length = 100
