[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fps_akernel_task"
version = "0.1.5"
description = "An FPS plugin for the kernel task API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.10"
dependencies = [
    "jupyverse-api >=0.12.0,<0.13.0",
    "anyio",
    "akernel >=0.3.4",
]

[[project.authors]]
name = "David Brochart"
email = "david.brochart@gmail.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/davidbrochart/akernel"

[project.entry-points]
"fps.modules"       = {akernel_task = "fps_akernel_task.main:AKernelTaskModule", akernelthread_task = "fps_akernel_task.main:AKernelThreadTaskModule"}
"jupyverse.modules" = {akernel_task = "fps_akernel_task.main:AKernelTaskModule", akernelthread_task = "fps_akernel_task.main:AKernelThreadTaskModule"}
